samples/_failures_safe/1761281321_958d2c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_00ed7beb.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_00ed7beb.c:174:9: error: expected declaration or statement at end of input
  174 |         }
      |         ^
./samples/SAFE/__tmp_00ed7beb.c:174:9: error: expected declaration or statement at end of input
